syntax = "proto3";

import "google/protobuf/timestamp.proto";

package yandex.cloud.priv.vpc.v1.inner;

option go_package = "github.com/ydb-platform/ydb/ydb/public/api/client/yc_private/vpc/inner;vpcinnerpb";
option java_outer_classname = "PVIS";

message Semaphore {
  string id = 1;
  string cloud_id = 2;

  int64 max_concurrent_locks = 3;
  double min_available_hosts = 4; // >=1 - amount, <1 - percentage
}

message SemaphoreLock {
  string semaphore_id = 1;
  string fqdn = 2;
  string owner = 3;
  google.protobuf.Timestamp created_at = 4;
}
